--- a/client/index.html
+++ b/client/index.html
@@ -48,7 +48,7 @@
       content="🚀 Receive USDC tips instantly via shareable links and QR codes — no logins! Built on Solana for speed & security. Perfect for artists, streamers, and fans. Try Soltip today!"
     />
     <meta property="og:image" content="/favicon.png" />
-    <meta property="og:url" content="https://soltips.xyz" />
+    <meta property="og:url" content="https://soltip.waliilaw.me" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Soltip" />
     <!--  -->
